--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -55,16 +55,98 @@
 .main-chat-header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
+.chat-name{
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+
+.exit-btn{
+  margin-top: 40px;
+}
+.exit-btn a{
+  font-size: 10px;
+  color: darkred;
+  border: 1px solid darkred;
+  padding: 20px;
+  text-decoration: none;
+}
 .main-chat-body {
   height: calc(100vh - 100px - 90px);
   background-color: #fafafa;
   padding: 46px 40px 0;
+  overflow: scroll;
+}
+
+.messagelist{
+  margin: 10px 0 0 0;
+}
+
+.name-date{
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.username{
+  font-size: 16px;
+  color: #434A54;
+  margin-right: 10px;
+}
+
+.date{
+  font-size: 12px;
+  color: #999;
+}
+
+.message{
+  font-size: 14px;
+  color: #434A54;
+  margin-bottom: 40px;
 }
 
 .main-chat-footer {
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
+  display: flex;
+}
+
+.chat-box{
+  background-color: white;
+  display: flex;
+  width: 100%;
+}
+.form-message{
+  padding-left: 10px;
+  height: 50px;
+  border: none;
+  width: 100%;
+}
+
+.submit-btn{
+  background-color: #38AEF0;
+  font-size: 16px;
+  color: white;
+  padding: 0 20px;
+  margin-left: 15px;
+  border: none;
+  height: 50px;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
