--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -25,13 +25,14 @@
       <div class = "message">元気？</div>
    </div>
 </div>
-<div class = "main-chat-footer">
-   <div class = "chat-box">
-      <input class = "form-message" placeholder= "type a message">
-      <label class="form-image">
-      <span class="image-file">画像</span>
-      <input type="file" class="hidden">
-    </label>
-   </div>
-   <input class = "submit-btn" type="submit" value="送信">
-</div>
+
+<%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+  <div class = "main-chat-footer">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+     <label class="form-image">
+       <span class="image-file">画像</span>
+       <%= f.file_field :image, class: 'hidden' %>
+     </label>
+    <%= f.submit '送信', class: 'form-submit' %>
+  </div>
+<% end %>
