--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,38 +1,25 @@
-<div class = "main-chat-header">
+<div class = "chat-header">
  <div class = "left-header">
-   <div class = "chat-name">hello</div>
+   <div class = "header-title">hello</div>
  </div>
  <div class = "right-header">
-   <div class = "exit-btn">
+   <div class = "header-button">
       <a href ="#">チャットを終了する</a>
    </div>
  </div>
 </div>
-<div class = "main-chat-body">
-   <div class = "messagelist">
-      <div class = "name-date">
-         <div class = "username">Tom</div>
-         <div class = "date">2022/11/28(Mon) 13:38:30</div>
-      </div>
-      <div class = "message">おはよう</div>
-   </div>
-
-   <div class = "messagelist">
-      <div class = "name-date">
-         <div class = "username">Sim</div>
-         <div class = "date">2022/11/28(Mon) 13:38:30</div>
-      </div>
-      <div class = "message">元気？</div>
-   </div>
+<div class = "messages">
+   <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
-  <div class = "main-chat-footer">
+  <div class = "lower-message">
     <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
-     <label class="form-image">
+    <label class="form-image">
        <span class="image-file">画像</span>
        <%= f.file_field :image, class: 'hidden' %>
-     </label>
-    <%= f.submit '送信', class: 'form-submit' %>
-  </div>
+    </label>
+   </div>
+   <%= f.submit '送信', class: 'form-submit' %>
+  
 <% end %>
