--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,15 +1,15 @@
 	<div class = "side-bar-header">
-     <div class = "nickname">
+     <div class = "header-name">
         <%= link_to current_user.name, edit_user_path(current_user) %>
      </div>
-     <div class = "new-btn">
+     <div class = "create-room">
         <%= link_to "チャットを作成する", new_room_path %>
      </div>
   </div>
-  <div class = "side-bar-roomlists">
+  <div class = "rooms">
    <% current_user.rooms.each do |room| %>
      <div class = "room">
-       <div class = "list">
+       <div class = "room-name">
          <%= link_to room.name, room_messages_path(room) %>
        </div>
      </div>
